[gd_scene load_steps=7 format=2]

[ext_resource path="res://Test/TestSoundPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Test/TestAnswer.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Test/Letter/TestWordFromSound.gd" type="Script" id=4]
[ext_resource path="res://Test/test_bg.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="TestWordFromSound" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="TestSoundPlayer" parent="." instance=ExtResource( 1 )]
position = Vector2( 156.496, 49.3822 )
scale = Vector2( 0.25, 0.25 )

[node name="Explanation" type="Label" parent="."]
anchor_right = 1.0
margin_top = 18.2215
margin_bottom = 32.2215
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.309804, 0.309804, 0.309804, 1 )
text = "_how_do_you_write_this_sound"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer_1" parent="." instance=ExtResource( 2 )]
position = Vector2( 111.095, 118.315 )

[node name="answer_2" parent="." instance=ExtResource( 2 )]
position = Vector2( 243.199, 93.8622 )

[node name="answer_3" parent="." instance=ExtResource( 2 )]
position = Vector2( 141.199, 97.1519 )

[node name="answer_4" parent="." instance=ExtResource( 2 )]
position = Vector2( 169.743, 124.575 )

[node name="answer_5" parent="." instance=ExtResource( 2 )]
position = Vector2( 68.2053, 97.1519 )

[node name="answer_6" parent="." instance=ExtResource( 2 )]
position = Vector2( 255.63, 124.575 )

[node name="answer_7" parent="." instance=ExtResource( 2 )]
position = Vector2( 206.584, 110.576 )
